--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- trigger github pages build -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -45,4 +46,5 @@
     
     <script src="script.js"></script>
 </body>
+
 </html>
