--- a/watch.html
+++ b/watch.html
@@ -20,12 +20,14 @@
     <nav class="main-nav">
       <a href="index.html">Explore</a>
       <a href="upload.html" class="btn-primary">Upload</a>
-      <button class="profile-btn"><i class="fas fa-user-circle"></i> Profile</button>
+      <button class="profile-btn">
+        <i class="fas fa-user-circle"></i> Profile
+      </button>
     </nav>
   </header>
 
   <main class="container watch-layout">
-    <!-- Left: main video -->
+    <!-- LEFT: main video + details -->
     <section>
       <div class="video-wrapper">
         <video id="main-player" controls poster="">
@@ -64,7 +66,7 @@
       </section>
     </section>
 
-    <!-- Right: recommended list -->
+    <!-- RIGHT: recommended videos -->
     <aside>
       <h3>Up next</h3>
       <div id="recommended-list"></div>
