--- a/watch.html
+++ b/watch.html
@@ -30,7 +30,7 @@
     <!-- LEFT: main video + details -->
     <section>
       <div class="video-wrapper">
-        <!-- 👇 we now use an iframe, not <video> -->
+        <!-- We use an iframe that loads Google Drive preview -->
         <iframe
           id="video-frame"
           src=""
