--- a/watch.html
+++ b/watch.html
@@ -30,7 +30,7 @@
     <!-- LEFT: main video + details -->
     <section>
       <div class="video-wrapper">
-        <!-- We use an iframe that loads Google Drive preview -->
+        <!-- Google Drive / YouTube etc will be loaded here -->
         <iframe
           id="video-frame"
           src=""
